force-app/main/default/objects/Volunteer_Job__c/fields/MinAge__c.field-meta.xml
<CustomField>
    <fullName>MinAge__c</fullName>
    <label>Min Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>