force-app/main/default/objects/Volunteer_Job__c/fields/Required_Training__c.field-meta.xml
<CustomField>
    <fullName>Required_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Training</label>
    <type>Checkbox</type>
</CustomField>