force-app/main/default/objects/Volunteer_Job__c/fields/SkillRequired__c.field-meta.xml
<CustomField>
    <fullName>SkillRequired__c</fullName>
    <label>Skill Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>