force-app/main/default/objects/Volunteer_Job__c/fields/Total_Slots_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Slots_c__c</fullName>
    <label>Total_Slots__c</label>
    <summarizedField>Volunteer_Shift__c.MaxVolunteers__c</summarizedField>
    <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>