force-app/main/default/objects/Volunteer_Job__c/fields/Volunteer_Program__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Program</label>
    <referenceTo>Volunteer_Program__c</referenceTo>
    <relationshipLabel>Volunteer Jobs</relationshipLabel>
    <relationshipName>Volunteer_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>